--- a/ws_slack/config.json
+++ b/ws_slack/config.json
@@ -1,6 +1,8 @@
 {
-  "Reports": ["lib_vulnerabilities"],
+  "Reports": ["lib_vulnerabilities", "alerts"],
   "ChannelPrefix": "ws__",
-  "MandatoryEnvVars": ["SLACK_BOT_TOKEN", "SLACK_SIGNING_SECRET", "WS_URL", "WS_ORG_TOKEN", "WS_USER_KEY"],
-  "MandatoryWsConnProp": ["ws_user_key", "ws_org_token", "ws_url"]
+  "MandatoryEnvVars": ["SLACK_BOT_TOKEN", "SLACK_SIGNING_SECRET", "WS_URL", "WS_ORG_TOKEN", "WS_USER_KEY", "SSL_CERTFILE_PASSWORD"],
+  "MandatoryWsConnProp": ["ws_user_key", "ws_org_token", "ws_url"],
+  "ssl_keyfile": "../certificates/key.pem",
+  "ssl_certfile": "../certificates/server_crt.pem"
 }
