--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-uvicorn~=0.13.4
-fastapi~=0.63.0
+uvicorn==0.14.0
+fastapi~=0.65.1
+slack_sdk==3.6.0
+slack-bolt~=1.6.0
+ws-sdk==0.3.2
+setuptools==57.0.0
 pydantic~=1.8.2
-slack_sdk~=3.5.0
-slack-bolt~=1.5.0
-ws-sdk~=0.1.3
